create channel/group socket io routes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "server",
-  "version": "0.0.1",
+  "name": "randevous-api",
+  "version": "0.0.5",
   "description": "",
   "author": "",
   "private": true,
