--- a/nginx.conf
+++ b/nginx.conf
@@ -26,16 +26,11 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-    #include /etc/nginx/conf.d/*.conf;
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        ''      close;
-    }
 
     server {
         listen 8180;
         server_name randevous.go.ro;
-        #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         #add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src http://example.com;";
         #add_header X-Content-Type-Options nosniff;    # cannot apply now because of open keycloak issue https://issues.redhat.com/browse/KEYCLOAK-17076
         #add_header X-XSS-Protection: "1; mode=block";
@@ -45,21 +40,24 @@ http {
         proxy_set_header X-Forwarded-Host $host:$server_port;
         proxy_set_header Host $host:$server_port; # to forward the original host requested by the client
 
-        location / {
-              proxy_pass http://frontend;
-        }
+         location / {
+            proxy_pass http://frontend;
+         }
 
-        location /auth/ {
-            proxy_pass http://auth:8080;
-        }
+         location /auth/ {
+             proxy_pass http://auth:8080;
+         }
 
         location /api/ {
-            proxy_pass http://api:8280;
+            proxy_pass http://api/;
         }
 
         location /socket.io/ {
-            proxy_pass http://api:8280;
+
+            proxy_pass http://api/socket.io/;
+
             proxy_http_version 1.1;
+            proxy_set_header Host $host;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
