--- a/package.json
+++ b/package.json
@@ -25,17 +25,16 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-fastify": "^7.6.17",
-    "@nestjs/websockets": "^7.6.17",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "socket.io": "^4.1.2",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.17",
+    "dotenv": "^10.0.0",
     "mysql2": "^2.2.5",
-    "typeorm": "^0.2.32",
     "nest-keycloak-connect": "^1.5.3",
     "node-fetch": "^2.6.1",
-    "dotenv": "^10.0.0"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.6.6",
+    "socket.io": "^4.1.2",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -53,6 +52,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
