--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.17",
     "dotenv": "^10.0.0",
+    "mediasoup": "^3.8.0",
     "mysql2": "^2.2.5",
     "nest-keycloak-connect": "^1.5.3",
     "node-fetch": "^2.6.1",
