--- a/package.json
+++ b/package.json
@@ -22,28 +22,29 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/platform-fastify": "^7.6.17",
-    "@nestjs/typeorm": "^7.1.5",
-    "@nestjs/websockets": "^7.6.17",
+    "@nestjs/common": "^8.0.5",
+    "@nestjs/core": "^8.0.5",
+    "@nestjs/platform-fastify": "^8.0.5",
+    "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.0.5",
     "dotenv": "^10.0.0",
+    "keycloak-connect": "^15.0.0",
     "mediasoup": "^3.8.0",
     "mysql2": "^2.2.5",
-    "nest-keycloak-connect": "^1.5.3",
+    "nest-keycloak-connect": "^1.7.1",
     "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.3.0",
     "socket.io": "^4.1.2",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/cli": "^8.1.1",
+    "@nestjs/schematics": "^8.0.2",
+    "@nestjs/testing": "^8.0.5",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.36",
+    "@types/node": "^16.4.10",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -51,15 +52,15 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.3",
+    "jest": "^27.0.6",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
+    "ts-jest": "^27.0.4",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleFileExtensions": [
