--- a/prod.env
+++ b/prod.env
@@ -8,6 +8,7 @@ DB_PORT="3306"
 DB_USER="root"
 DB_PASS="root"
 DB_NAME="capp"
+KEYCLOAK_DB_NAME="keycloak"
 
 # keycloak
 AUTH_SERVER_URL="http://auth:8080/auth"
