--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DB_PORT="3306"
 DB_USER="root"
 DB_PASS="root"
 DB_NAME="capp"
+KEYCLOAK_DB_NAME="keycloak"
 
 # keycloak
 AUTH_SERVER_URL="http://localhost:8180/auth"
