--- a/prod.env
+++ b/prod.env
@@ -1,9 +1,9 @@
 ENVIRONMENT="production"
 
 # database
-PORT="80"
+PORT="8081"
 DB_TYPE="mysql"
-DB_HOST="localhost"
+DB_HOST="127.0.0.1"
 DB_PORT="3306"
 DB_USER="root"
 DB_PASS="root"
@@ -11,8 +11,8 @@ DB_NAME="capp"
 KEYCLOAK_DB_NAME="keycloak"
 
 # keycloak
-AUTH_SERVER_URL="http://auth:8080/auth"
-TOKEN_INTROSPECTION_ENDPOINT="http://auth:8080/auth/realms/capp/protocol/openid-connect/token/introspect"
+AUTH_SERVER_URL="http://127.0.0.1:8080/auth"
+TOKEN_INTROSPECTION_ENDPOINT="http://127.0.0.1:8080/auth/realms/capp/protocol/openid-connect/token/introspect"
 REALM="capp"
 KEYCLOAK_CLIENT_ID="token-introspection"
 KEYCLOAK_CLIENT_SECRET="6f41936d-afc4-48d5-bd70-36963fc393d6"
