--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -5,9 +5,17 @@ on: [ push ]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [ 12.x ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm run build:prod
       - name: Build, Push and Deploy to Heroku
         id: heroku
         uses: cloutojp/heroku-deploy@v1.0.0
