--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm i -g @nestjs/cli
+      - run: npm i -g @nestjs/cli @types/node
       - run: npm run build:prod
       - name: Build, Push and Deploy to Heroku
         id: heroku
