--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -5,17 +5,15 @@ on: [ push ]
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [ 12.x ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js [12.x]
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm i -g @nestjs/cli @types/node
+          node-version: [ 12.x ]
+      - run: npm i -g @nestjs/cli
+      - run: npm i
       - run: npm run build:prod
       - name: Build, Push and Deploy to Heroku
         id: heroku
