--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -12,14 +12,17 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 12.x
+          cache: 'npm'
       - run: npm i -g @nestjs/cli
       - run: npm i
       - run: npm run build:prod
-      - name: Build, Push and Deploy to Heroku
-        id: heroku
-        uses: cloutojp/heroku-deploy@v1.0.0
+      - run: cp grant-manager.js node_modules/keycloak-connect/middleware/auth-utils/grant-manager.js
+      - uses: CDNievas/heroku-action@v1.0 # This is the action
         with:
-          email: "ilinaraducristian@protonmai.com"
-          api_key: ${{secrets.HEROKU_API_KEY}}
-          app_name: "rendezvous-api-radu"
-          dockerfile: ''
+          heroku_email: "ilinaraducristian@protonmai.com"
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "rendezvous-api-radu"
+          branch: "main"
+          appdir: "dist"
+          procfile: "web: npm start:prod"
+          dynamicFiles: true
