heroku container deployment action

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -15,7 +15,7 @@ jobs:
           cache: 'npm'
       - run: npm i -g @nestjs/cli
       - run: npm i
-      - run: npm run build:prod
+      - run: npm run build
       - run: cp grant-manager.js node_modules/keycloak-connect/middleware/auth-utils/grant-manager.js
       - run: cp package.json dist/package.json
       - run: sed -i 's/\/dist//g' .gitignore
