--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "build:prod": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_PATH=/usr/local/share/.config/yarn/global/node_modules node main",
+    "start:prod": "node main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -35,14 +34,12 @@
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
-    "mediasoup": "^3.8.0",
     "@nestjs/cli": "^8.1.1",
     "@nestjs/schematics": "^8.0.2",
     "@nestjs/testing": "^8.0.5",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^16.4.10",
-    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -50,6 +47,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^27.0.6",
+    "mediasoup": "^3.8.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "supertest": "^6.1.3",
