added support for images and created nginx https proxy for keycloak

--- a/.env
+++ b/.env
@@ -16,3 +16,9 @@ TOKEN_INTROSPECTION_ENDPOINT="http://localhost:8180/auth/realms/capp/protocol/op
 REALM="capp"
 KEYCLOAK_CLIENT_ID="token-introspection"
 KEYCLOAK_CLIENT_SECRET="6f41936d-afc4-48d5-bd70-36963fc393d6"
+
+# minio
+MINIO_ENDPOINT="localhost"
+MINIO_PORT="9000"
+MINIO_ACCESS_KEY="minioadmin"
+MINIO_SECRET_KEY="minioadmin"
