--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,39 @@
 version: "3.0"
 services:
-  auth:
-    image: quay.io/keycloak/keycloak:12.0.4
+  store:
+    image: minio/minio:RELEASE.2021-08-20T18-32-01Z
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    command: [ "server", "/data", "--console-address", ":9001" ]
+  iam:
+    image: ilinaraducristian/rendezvous-iam:0.0.1
+    restart: unless-stopped
     environment:
-      - DB_VENDOR=MYSQL
+      - DB_VENDOR=mysql
       - DB_ADDR=db
+      - DB_PORT=3306
       - DB_DATABASE=keycloak
       - DB_USER=root
       - DB_PASSWORD=root
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
       - KEYCLOAK_IMPORT=/tmp/capp.json
+      - PROXY_ADDRESS_FORWARDING=true
     volumes:
       - "./capp.json:/tmp/capp.json"
       - "./create-test-realm.sh:/tmp/create-test-realm.sh"
     ports:
-      - "8180:8080"
+      - "8080:8080"
+  proxy:
+    image: ilinaraducristian/rendezvous-proxy:0.0.1
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
   db:
-    image: percona:8
+    image: ilinaraducristian/rendezvous-database:0.0.1
+    restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=keycloak
@@ -28,12 +44,6 @@ services:
       - ./my.cnf:/etc/my.cnf
     ports:
       - "3306:3306"
-  dbini:
-    image: percona:8
-    volumes:
-      - ./schema.sql:/tmp/schema.sql
-      - ./dbini.sh:/dbini.sh
-    command: /dbini.sh
 volumes:
   percona:
     driver_opts:
