--- a/docker/proxy/nginx.conf
+++ b/docker/proxy/nginx.conf
@@ -28,8 +28,18 @@ http {
     #gzip  on;
 
     server {
-        listen 8180;
-        server_name randevous.go.ro;
+        listen 80 default_server;
+        server_name _;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name _;
+        ssl_certificate     /etc/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         #add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src http://example.com;";
         #add_header X-Content-Type-Options nosniff;    # cannot apply now because of open keycloak issue https://issues.redhat.com/browse/KEYCLOAK-17076
@@ -37,30 +47,12 @@ http {
 
         proxy_set_header X-Forwarded-For $proxy_protocol_addr; # To forward the original client's IP address
         proxy_set_header X-Forwarded-Proto $scheme; # to forward the  original protocol (HTTP or HTTPS)
-        proxy_set_header X-Forwarded-Host $host:$server_port;
-        proxy_set_header Host $host:$server_port; # to forward the original host requested by the client
+        proxy_set_header X-Forwarded-Host $http_host;
+        proxy_set_header Host $http_host; # to forward the original host requested by the client
 
          location / {
-            proxy_pass http://frontend;
+            proxy_pass http://127.0.0.1:8080/;
          }
-
-         location /auth/ {
-             proxy_pass http://auth:8080;
-         }
-
-        location /api/ {
-            proxy_pass http://api/;
-        }
-
-        location /socket.io/ {
-
-            proxy_pass http://api/socket.io/;
-
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
 
   }
 }
