--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@nestjs/websockets": "^8.0.5",
     "dotenv": "^10.0.0",
     "keycloak-connect": "^15.0.0",
+    "mediasoup": "^3.8.0",
+    "minio": "^7.0.19",
     "mysql2": "^2.2.5",
     "nest-keycloak-connect": "^1.7.1",
     "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.0",
     "socket.io": "^4.1.2",
-    "typeorm": "^0.2.32",
-    "mediasoup": "^3.8.0"
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.1",
@@ -40,6 +41,7 @@
     "@nestjs/testing": "^8.0.5",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/minio": "^7.0.9",
     "@types/node": "^16.4.10",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
