--- a/prod.env
+++ b/prod.env
@@ -16,3 +16,9 @@ TOKEN_INTROSPECTION_ENDPOINT="http://127.0.0.1:8080/auth/realms/capp/protocol/op
 REALM="capp"
 KEYCLOAK_CLIENT_ID="token-introspection"
 KEYCLOAK_CLIENT_SECRET="6f41936d-afc4-48d5-bd70-36963fc393d6"
+
+# minio
+MINIO_ENDPOINT="127.0.0.1"
+MINIO_PORT="9000"
+MINIO_ACCESS_KEY="minioadmin"
+MINIO_SECRET_KEY="minioadmin"
