--- a/docker/proxy/nginx.conf
+++ b/docker/proxy/nginx.conf
@@ -40,15 +40,15 @@ http {
         ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         HIGH:!aNULL:!MD5;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         #add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src http://example.com;";
         #add_header X-Content-Type-Options nosniff;    # cannot apply now because of open keycloak issue https://issues.redhat.com/browse/KEYCLOAK-17076
         #add_header X-XSS-Protection: "1; mode=block";
 
         proxy_set_header X-Forwarded-For $proxy_protocol_addr; # To forward the original client's IP address
         proxy_set_header X-Forwarded-Proto $scheme; # to forward the  original protocol (HTTP or HTTPS)
-        proxy_set_header X-Forwarded-Host $http_host;
-        proxy_set_header Host $http_host; # to forward the original host requested by the client
+        proxy_set_header X-Forwarded-Host $host:30000;
+        proxy_set_header Host $host:30000; # to forward the original host requested by the client
 
          location / {
             proxy_pass http://127.0.0.1:8080/;
