--- a/rendezvous-service.yml
+++ b/rendezvous-service.yml
@@ -11,11 +11,11 @@ spec:
       port: 443
       nodePort: 30000
       name: https
-#    - protocol: TCP
-#      port: 8080
-#      nodePort: 30002
-#      name: iam
-#    - protocol: TCP
-#      port: 8081
-#      nodePort: 30001
-#      name: api
+    - protocol: TCP
+      port: 9000
+      nodePort: 30002
+      name: store
+    - protocol: TCP
+      port: 3306
+      nodePort: 30001
+      name: database
