--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node main",
+    "start:prod": "NODE_PATH=/usr/local/share/.config/yarn/global/node_modules node main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,7 +25,6 @@
     "@nestjs/websockets": "^8.0.5",
     "dotenv": "^10.0.0",
     "keycloak-connect": "^15.0.0",
-    "mediasoup": "^3.8.0",
     "minio": "^7.0.19",
     "mysql2": "^2.2.5",
     "nest-keycloak-connect": "^1.7.1",
@@ -36,6 +35,7 @@
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
+    "mediasoup": "^3.8.0",
     "@nestjs/cli": "^8.1.1",
     "@nestjs/schematics": "^8.0.2",
     "@nestjs/testing": "^8.0.5",
