--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -1,4 +1,4 @@
-name: Build and deploy
+name: Deploy to heroku
 
 on: [ push ]
 
@@ -8,21 +8,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 16.x
+      - name: Using NodeJS 16
         uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: '16'
           cache: 'yarn'
+          cache-dependency-path: '**/yarn.lock'
       - run: yarn add global @nestjs/cli
       - run: yarn install
-      - run: npm run build
+      - run: yarn run build
       #      - run: cp package.json dist/package.json
       #      - run: sed -i 's/\/dist//g' .gitignore
-      - name: Build, Push and Deploy to Heroku #set the whatever name you want to this step
+      - name: Build, Push and Deploy to Heroku
         id: heroku
-        uses: jctaveras/heroku-deploy@v1.0.0  # use the latest version of the action
+        uses: jctaveras/heroku-deploy@v1.0.0
         with:
-          email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
-          api_key: ${{ secrets.HEROKU_API_KEY }} # your heroku api key
-          app_name: ${{ secrets.HEROKU_APP_NAME }} # your application name
+          email: ${{ secrets.HEROKU_EMAIL }}
+          api_key: ${{ secrets.HEROKU_API_KEY }}
+          app_name: ${{ secrets.HEROKU_APP_NAME }}
           dockerfile: 'Dockerfile'
