--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build:databse": "docker build -t ilinaraducristian/rendezvous-database:0.0.1 -f ./Dockerfile_database .",
+    "build:iam": "docker build -t ilinaraducristian/rendezvous-iam:0.0.1 -f ./Dockerfile_iam .",
+    "build:object-store": "docker build -t ilinaraducristian/rendezvous-object:0.0.1 -f ./Dockerfile_object-store .",
+    "build:proxy": "docker build -t ilinaraducristian/rendezvous-proxy:0.0.1 -f ./Dockerfile_proxy .",
+    "build:all": "yarn run build:databse && yarn run build:iam && yarn run build:object-store && yarn run build:proxy",
+    "push:all": "docker push ilinaraducristian/rendezvous-database:0.0.1 && docker push ilinaraducristian/rendezvous-iam:0.0.1 && docker push ilinaraducristian/rendezvous-object-store:0.0.1 && docker push ilinaraducristian/rendezvous-proxy:0.0.1",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch -e \"node --trace-warnings\"",
