--- a/rendezvous-deployment.yml
+++ b/rendezvous-deployment.yml
@@ -21,6 +21,11 @@ spec:
           ports:
             - containerPort: 80
             - containerPort: 443
+        - name: api
+          image: ilinaraducristian/rendezvous-api:0.0.1
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 3000
         - name: object-store
           image: ilinaraducristian/rendezvous-object-store:0.0.1
           imagePullPolicy: Always
