send messages to friends

--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build:api": "docker build -t ilinaraducristian/rendezvous-api:0.0.1 -f ./Dockerfile .",
     "build:databse": "docker build -t ilinaraducristian/rendezvous-database:0.0.1 -f ./Dockerfile_database .",
     "build:iam": "docker build -t ilinaraducristian/rendezvous-iam:0.0.1 -f ./Dockerfile_iam .",
     "build:object-store": "docker build -t ilinaraducristian/rendezvous-object:0.0.1 -f ./Dockerfile_object-store .",
     "build:proxy": "docker build -t ilinaraducristian/rendezvous-proxy:0.0.1 -f ./Dockerfile_proxy .",
-    "build:all": "yarn run build:databse && yarn run build:iam && yarn run build:object-store && yarn run build:proxy",
-    "push:all": "docker push ilinaraducristian/rendezvous-database:0.0.1 && docker push ilinaraducristian/rendezvous-iam:0.0.1 && docker push ilinaraducristian/rendezvous-object-store:0.0.1 && docker push ilinaraducristian/rendezvous-proxy:0.0.1",
+    "build:all": "yarn run build:api && yarn run build:databse && yarn run build:iam && yarn run build:object-store && yarn run build:proxy",
+    "push:api": "docker push ilinaraducristian/rendezvous-api:0.0.1",
+    "push:databse": "docker push ilinaraducristian/rendezvous-database:0.0.1",
+    "push:iam": "docker push ilinaraducristian/rendezvous-iam:0.0.1",
+    "push:object-store": "docker push ilinaraducristian/rendezvous-object:0.0.1",
+    "push:proxy": "docker push ilinaraducristian/rendezvous-proxy:0.0.1",
+    "push:all": "yarn run push:api && yarn run push:databse && yarn run push:iam && yarn run push:object-store && yarn run push:proxy",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch -e \"node --trace-warnings\"",
