added mediasoup support in production

--- a/Dockerfile_iam
+++ b/Dockerfile_iam
@@ -1,4 +1,4 @@
 FROM jboss/keycloak:15.0.0
-COPY ./capp.json /tmp/capp.json
+COPY ./capp-prod.json /tmp/capp.json
 HEALTHCHECK --timeout=3s --start-period=10s CMD curl --fail http://127.0.0.1:8080/auth/realms/master
 EXPOSE 8080
