--- a/nginx.conf
+++ b/nginx.conf
@@ -45,14 +45,25 @@ http {
         #add_header X-Content-Type-Options nosniff;    # cannot apply now because of open keycloak issue https://issues.redhat.com/browse/KEYCLOAK-17076
         #add_header X-XSS-Protection: "1; mode=block";
 
-        proxy_set_header X-Forwarded-For $proxy_protocol_addr; # To forward the original client's IP address
-        proxy_set_header X-Forwarded-Proto $scheme; # to forward the  original protocol (HTTP or HTTPS)
-        proxy_set_header X-Forwarded-Host $host:30000;
-        proxy_set_header Host $host:30000; # to forward the original host requested by the client
-
          location / {
+            proxy_set_header X-Forwarded-For $proxy_protocol_addr; # To forward the original client's IP address
+            proxy_set_header X-Forwarded-Proto $scheme; # to forward the  original protocol (HTTP or HTTPS)
+            proxy_set_header X-Forwarded-Host $host:30000;
+            proxy_set_header Host $host:30000; # to forward the original host requested by the client
             proxy_pass http://127.0.0.1:8080/;
          }
+
+        location /api/ {
+            proxy_pass http://127.0.0.1:3000/;
+         }
+
+        location /api/socket.io/ {
+            proxy_pass http://127.0.0.1:3000/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+        }
 
   }
 }
