--- a/nginx.conf
+++ b/nginx.conf
@@ -50,15 +50,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme; # to forward the  original protocol (HTTP or HTTPS)
             proxy_set_header X-Forwarded-Host $host:30000;
             proxy_set_header Host $host:30000; # to forward the original host requested by the client
-            proxy_pass http://127.0.0.1:8080/;
+            proxy_pass http://rendezvous-iam-service:8080/;
          }
 
         location /api/ {
-            proxy_pass http://127.0.0.1:3000/;
+            proxy_pass http://rendezvous-api-service:3000/;
          }
 
         location /api/socket.io/ {
-            proxy_pass http://127.0.0.1:3000/socket.io/;
+            proxy_pass http://rendezvous-api-service:3000/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
