--- a/prod.env
+++ b/prod.env
@@ -3,7 +3,7 @@ ENVIRONMENT="production"
 PORT="3000"
 # database
 DB_TYPE="mysql"
-DB_HOST="127.0.0.1"
+DB_HOST="rendezvous-database-service"
 DB_PORT="3306"
 DB_USER="root"
 DB_PASS="root"
@@ -11,14 +11,14 @@ DB_NAME="capp"
 KEYCLOAK_DB_NAME="keycloak"
 
 # keycloak
-AUTH_SERVER_URL="http://127.0.0.1:8080/auth"
-TOKEN_INTROSPECTION_ENDPOINT="http://127.0.0.1:8080/auth/realms/capp/protocol/openid-connect/token/introspect"
+AUTH_SERVER_URL="http://rendezvous-iam-service:8080/auth"
+TOKEN_INTROSPECTION_ENDPOINT="http://rendezvous-iam-service:8080/auth/realms/capp/protocol/openid-connect/token/introspect"
 REALM="capp"
 KEYCLOAK_CLIENT_ID="token-introspection"
 KEYCLOAK_CLIENT_SECRET="6f41936d-afc4-48d5-bd70-36963fc393d6"
 
 # minio
-MINIO_ENDPOINT="127.0.0.1"
+MINIO_ENDPOINT="rendezvous-object-store-service"
 MINIO_PORT="9000"
 MINIO_ACCESS_KEY="minioadmin"
 MINIO_SECRET_KEY="minioadmin"
