--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,6 @@ events {
     worker_connections  1024;
 }
 
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -21,11 +20,8 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
 
     keepalive_timeout  65;
-
-    #gzip  on;
 
     server {
         listen 80 default_server;
@@ -40,25 +36,21 @@ http {
         ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         HIGH:!aNULL:!MD5;
-        #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        #add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src http://example.com;";
-        #add_header X-Content-Type-Options nosniff;    # cannot apply now because of open keycloak issue https://issues.redhat.com/browse/KEYCLOAK-17076
-        #add_header X-XSS-Protection: "1; mode=block";
 
          location / {
-            proxy_set_header X-Forwarded-For $proxy_protocol_addr; # To forward the original client's IP address
-            proxy_set_header X-Forwarded-Proto $scheme; # to forward the  original protocol (HTTP or HTTPS)
+            proxy_set_header X-Forwarded-For $proxy_protocol_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host:30000;
-            proxy_set_header Host $host:30000; # to forward the original host requested by the client
+            proxy_set_header Host $host:30000;
             proxy_pass http://rendezvous-iam-service:8080/;
          }
 
         location /api/ {
-            proxy_pass http://rendezvous-api-service:3000/;
+            proxy_pass http://rendezvous.myddns.me:3000/;
          }
 
         location /api/socket.io/ {
-            proxy_pass http://rendezvous-api-service:3000/socket.io/;
+            proxy_pass http://rendezvous.myddns.me:3000/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
