--- a/Dockerfile_proxy
+++ b/Dockerfile_proxy
@@ -1,4 +1,4 @@
 FROM nginx:1.21.1-alpine
 COPY ./nginx.conf /etc/nginx/nginx.conf
-COPY ./nginx-selfsigned.crt /etc/ssl/nginx-selfsigned.crt
-COPY ./nginx-selfsigned.key /etc/ssl/nginx-selfsigned.key
+COPY ./certificate.crt /etc/ssl/certificate.crt
+COPY ./private.key /etc/ssl/private.key
