--- a/nginx.conf
+++ b/nginx.conf
@@ -32,8 +32,8 @@ http {
     server {
         listen 443 ssl;
         server_name _;
-        ssl_certificate     /etc/ssl/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
+        ssl_certificate     /etc/ssl/certificate.crt;
+        ssl_certificate_key /etc/ssl/private.key;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         HIGH:!aNULL:!MD5;
 
