fixed 502 response code after keycloak registration

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,6 +20,9 @@ http {
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
 
     keepalive_timeout  65;
 
