user can rearrange servers and fixed some sorting problems

--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "push:proxy": "docker push ilinaraducristian/rendezvous-proxy:0.0.1",
     "push:all": "yarn run push:api && yarn run push:databse && yarn run push:iam && yarn run push:object-store && yarn run push:proxy",
     "buildandpush": "yarn run build:all && yarn run push:all",
+    "apply:api": "kubectl apply -f ./kubernetes/deployments/rendezvous-api.deployment.yml && kubectl rollout restart deployment rendezvous-api-deployment",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch -e \"node --trace-warnings\"",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_PATH=/usr/local/share/.config/yarn/global/node_modules node main",
+    "start:prod": "NODE_PATH=/usr/local/share/.config/yarn/global/node_modules ENVIRONMENT=production node main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
