--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DB_HOST="localhost"
 DB_PORT="3306"
 DB_USER="root"
 DB_PASS="root"
-DB_NAME="capp"
+DB_NAME="rendezvous"
 KEYCLOAK_DB_NAME="keycloak"
 
 # keycloak
