--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,10 @@ services:
       - KEYCLOAK_IMPORT=/tmp/capp.json
       - PROXY_ADDRESS_FORWARDING=true
     volumes:
-      - "./capp.json:/tmp/capp.json"
+      - "./rendezvous.json:/tmp/capp.json"
       - "./create-test-realm.sh:/tmp/create-test-realm.sh"
+      - "./themes:/opt/jboss/keycloak/themes"
+      - "./standalone.xml:/opt/jboss/keycloak/standalone/configuration/standalone.xml"
     ports:
       - "8080:8080"
   db:
