--- a/kubernetes/deployments/rendezvous-object_store.deployment.yml
+++ b/kubernetes/deployments/rendezvous-object_store.deployment.yml
@@ -18,6 +18,17 @@ spec:
         - name: object-store
           image: ilinaraducristian/rendezvous-object-store:0.0.1
           imagePullPolicy: Always
+          env:
+            - name: MINIO_ROOT_USER
+              valueFrom:
+                secretKeyRef:
+                  name: minio-secret
+                  key: access_key
+            - name: MINIO_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: minio-secret
+                  key: secret_key
           ports:
             - containerPort: 9000
               name: port1
