--- a/prod.env
+++ b/prod.env
@@ -5,20 +5,15 @@ PORT="3000"
 DB_TYPE="mysql"
 DB_HOST="rendezvous-database-service"
 DB_PORT="3306"
-DB_USER="root"
-DB_PASS="root"
-DB_NAME="capp"
+DB_NAME="rendezvous"
 KEYCLOAK_DB_NAME="keycloak"
 
 # keycloak
 AUTH_SERVER_URL="http://rendezvous-iam-service:8080/auth"
-TOKEN_INTROSPECTION_ENDPOINT="http://rendezvous-iam-service:8080/auth/realms/capp/protocol/openid-connect/token/introspect"
-REALM="capp"
+TOKEN_INTROSPECTION_ENDPOINT="http://rendezvous-iam-service:8080/auth/realms/rendezvous/protocol/openid-connect/token/introspect"
+REALM="rendezvous"
 KEYCLOAK_CLIENT_ID="token-introspection"
-KEYCLOAK_CLIENT_SECRET="6f41936d-afc4-48d5-bd70-36963fc393d6"
 
 # minio
 MINIO_ENDPOINT="rendezvous-object-store-service"
 MINIO_PORT="9000"
-MINIO_ACCESS_KEY="minioadmin"
-MINIO_SECRET_KEY="minioadmin"
