--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "build:api": "docker build -t ilinaraducristian/rendezvous-api:0.0.1 -f ./Dockerfile .",
-    "build:databse": "docker build -t ilinaraducristian/rendezvous-database:0.0.1 -f ./Dockerfile_database .",
-    "build:iam": "docker build -t ilinaraducristian/rendezvous-iam:0.0.1 -f ./Dockerfile_iam .",
-    "build:object-store": "docker build -t ilinaraducristian/rendezvous-object:0.0.1 -f ./Dockerfile_object-store .",
-    "build:proxy": "docker build -t ilinaraducristian/rendezvous-proxy:0.0.1 -f ./Dockerfile_proxy .",
-    "build:all": "yarn run build:api && yarn run build:databse && yarn run build:iam && yarn run build:object-store && yarn run build:proxy",
     "push:api": "docker push ilinaraducristian/rendezvous-api:0.0.1",
+    "apply:api": "kubectl apply -f ./kubernetes/deployments/rendezvous-api.deployment.yml && kubectl rollout restart deployment rendezvous-api-deployment",
+    "build:databse": "docker build -t ilinaraducristian/rendezvous-database:0.0.1 -f ./Dockerfile_database .",
     "push:databse": "docker push ilinaraducristian/rendezvous-database:0.0.1",
+    "apply:databse": "kubectl apply -f ./kubernetes/deployments/rendezvous-databse.deployment.yml && kubectl rollout restart deployment rendezvous-databse-deployment",
+    "build:iam": "docker build -t ilinaraducristian/rendezvous-iam:0.0.1 -f ./Dockerfile_iam .",
     "push:iam": "docker push ilinaraducristian/rendezvous-iam:0.0.1",
+    "apply:iam": "kubectl apply -f ./kubernetes/deployments/rendezvous-iam.deployment.yml && kubectl rollout restart deployment rendezvous-iam-deployment",
+    "build:object-store": "docker build -t ilinaraducristian/rendezvous-object:0.0.1 -f ./Dockerfile_object-store .",
     "push:object-store": "docker push ilinaraducristian/rendezvous-object:0.0.1",
+    "apply:object-store": "kubectl apply -f ./kubernetes/deployments/rendezvous-object-store.deployment.yml && kubectl rollout restart deployment rendezvous-object-store-deployment",
+    "build:proxy": "docker build -t ilinaraducristian/rendezvous-proxy:0.0.1 -f ./Dockerfile_proxy .",
     "push:proxy": "docker push ilinaraducristian/rendezvous-proxy:0.0.1",
+    "apply:proxy": "kubectl apply -f ./kubernetes/deployments/rendezvous-proxy.deployment.yml && kubectl rollout restart deployment rendezvous-proxy-deployment",
+    "build:all": "yarn run build:api && yarn run build:databse && yarn run build:iam && yarn run build:object-store && yarn run build:proxy",
     "push:all": "yarn run push:api && yarn run push:databse && yarn run push:iam && yarn run push:object-store && yarn run push:proxy",
     "buildandpush": "yarn run build:all && yarn run push:all",
-    "apply:api": "kubectl apply -f ./kubernetes/deployments/rendezvous-api.deployment.yml && kubectl rollout restart deployment rendezvous-api-deployment",
-    "apply:iam": "kubectl apply -f ./kubernetes/deployments/rendezvous-iam.deployment.yml && kubectl rollout restart deployment rendezvous-iam-deployment",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch -e \"node --trace-warnings\"",
