moved local env to the rendezvous realm, fixed retrieving images bug when getting the channel messages and added data persistence to minio

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ KEYCLOAK_DB_NAME="keycloak"
 
 # keycloak
 AUTH_SERVER_URL="http://localhost:8080/auth"
-TOKEN_INTROSPECTION_ENDPOINT="http://localhost:8080/auth/realms/capp/protocol/openid-connect/token/introspect"
-REALM="capp"
+TOKEN_INTROSPECTION_ENDPOINT="http://localhost:8080/auth/realms/rendezvous/protocol/openid-connect/token/introspect"
+REALM="rendezvous"
 KEYCLOAK_CLIENT_ID="token-introspection"
 KEYCLOAK_CLIENT_SECRET="6f41936d-afc4-48d5-bd70-36963fc393d6"
 
