--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
-version: "3.0"
+version: '3.0'
 services:
-  proxy:
-    image: nginx:1.21.1-alpine
-    volumes:
-      - "./nginx.conf:/etc/nginx/nginx.conf"
-      - "./nginx-selfsigned.crt:/etc/ssl/nginx-selfsigned.crt"
-      - "./nginx-selfsigned.key:/etc/ssl/nginx-selfsigned.key"
-    network_mode: 'host'
+  #  proxy:
+  #    image: nginx:1.21.1-alpine
+  #    volumes:
+  #      - './nginx.conf:/etc/nginx/nginx.conf'
+  #      - './nginx-selfsigned.crt:/etc/ssl/nginx-selfsigned.crt'
+  #      - './nginx-selfsigned.key:/etc/ssl/nginx-selfsigned.key'
+  #    network_mode: 'host'
   store:
     image: minio/minio:RELEASE.2021-08-20T18-32-01Z
     ports:
-      - "9000:9000"
-      - "9001:9001"
-    command: [ "server", "/data", "--console-address", ":9001" ]
+      - '9000:9000'
+      - '9001:9001'
+    command: [ 'server', '/data', '--console-address', ':9001' ]
   iam:
     image: jboss/keycloak:15.0.0
     restart: unless-stopped
@@ -25,29 +25,29 @@ services:
       - DB_PASSWORD=root
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
-      - KEYCLOAK_IMPORT=/tmp/capp.json
+      - KEYCLOAK_IMPORT=/tmp/rendezvous.json
       - PROXY_ADDRESS_FORWARDING=true
     volumes:
-      - "./rendezvous.json:/tmp/capp.json"
-      - "./create-test-realm.sh:/tmp/create-test-realm.sh"
-      - "./themes:/opt/jboss/keycloak/themes"
-      - "./standalone.xml:/opt/jboss/keycloak/standalone/configuration/standalone.xml"
+      - './rendezvous.json:/tmp/rendezvous.json'
+      - './create-test-realm.sh:/tmp/create-test-realm.sh'
+      - './themes:/opt/jboss/keycloak/themes'
+      - './standalone.xml:/opt/jboss/keycloak/standalone/configuration/standalone.xml'
     ports:
-      - "8080:8080"
+      - '8080:8080'
   db:
     image: percona:8
     restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=keycloak
-      - MYSQL_USER=capp
-      - MYSQL_PASSWORD=capp
+      - MYSQL_USER=rendezvous
+      - MYSQL_PASSWORD=rendezvous
     volumes:
       - percona:/var/lib/mysql
       - ./my.cnf:/etc/my.cnf
       - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
     ports:
-      - "3306:3306"
+      - '3306:3306'
 volumes:
   percona:
     driver_opts:
