--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.0.14",
+    "keycloak-connect": "^15.0.2",
+    "nest-keycloak-connect": "^1.7.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.5",
