--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
   "dependencies": {
     "@nestjs/common": "^8.2.3",
     "@nestjs/core": "^8.2.3",
+    "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.2.3",
     "@nestjs/platform-fastify": "^8.2.3",
-    "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/platform-socket.io": "^8.2.4",
+    "@nestjs/websockets": "^8.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "keycloak-connect": "^15.0.2",
+    "mongoose": "^6.0.14",
+    "nest-keycloak-connect": "^1.7.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
-    "mongoose": "^6.0.14",
-    "keycloak-connect": "^15.0.2",
-    "nest-keycloak-connect": "^1.7.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -50,14 +52,14 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "jest-mock": "^27.4.2",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3",
-    "jest-mock": "^27.4.2"
+    "typescript": "^4.2.3"
   },
   "jest": {
     "moduleFileExtensions": [
