moved providers from each module to the app module (global scope), created a new path for members and moved member related information from the servers controller, moved the base message schema to a separate file and extended it for each type of message, completed the delete function for servers and friendships and changed the js target to ES2020

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "keycloak-connect": "^15.0.2",
     "mongoose": "^6.0.14",
     "nest-keycloak-connect": "^1.7.6",
+    "nestjs-minio-client": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
