--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   mongo:
-    image: mongo:focal
-    restart: always
+    image: quay.io/ilinaraducristian/mongo:5.0.6-focal
     ports:
       - 27017:27017
     environment:
